@@ -10,6 +10,7 @@ sig
   type solver_info = {
     name: string,
     dummy: bool,
+    sledgehammer_default: bool,
     class: Proof.context -> SMT_Util.class,
     avail: unit -> bool,
     options: Proof.context -> string list }
@@ -17,6 +18,7 @@ sig
   val set_solver_options: string * string -> Context.generic -> Context.generic
   val all_solvers_of: Proof.context -> string list
   val all_nondummy_solvers_of: Proof.context -> string list
+  val all_nondummy_sledgehammer_solvers_of: Proof.context -> string list
   val is_available: Proof.context -> string -> bool
   val available_solvers_of: Proof.context -> string list
   val select_solver: string -> Context.generic -> Context.generic
@@ -76,6 +78,7 @@ struct
 type solver_info = {
   name: string,
   dummy: bool,
+  sledgehammer_default: bool,
   class: Proof.context -> SMT_Util.class,
   avail: unit -> bool,
   options: Proof.context -> string list};
@@ -123,6 +126,15 @@ fun all_nondummy_solvers_of (ctxt : Proof.context) : string list =
   let
     val solvers = get_solvers' (Context.Proof ctxt)
     fun cons_nondummy (name, ({dummy = false, ...}, _)) names = name :: names
+      | cons_nondummy _ names = names
+  in
+    Library.build (Symtab.fold_rev cons_nondummy solvers)
+  end
+fun all_nondummy_sledgehammer_solvers_of (ctxt : Proof.context) : string list =
+  let
+    val solvers = get_solvers' (Context.Proof ctxt)
+    fun cons_nondummy (name, ({dummy = false, sledgehammer_default = true, ...}, _)) names =
+          name :: names
       | cons_nondummy _ names = names
   in
     Library.build (Symtab.fold_rev cons_nondummy solvers)
